syntax = "proto3";

package pb;

import "google/protobuf/Timestamp.proto";

option go_package = "github.com/mikeheft/go-backend/pb";

message User {
  string username = 1;
  string fullname = 2;
  string email = 3;
  google.protobuf.Timestamp password_changed_at = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}


